# django-graphene

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/books/: __init__.py  schema.py  urls.py  views.py
app/books/migrations/: 0001_initial.py
app/insurance/: apps.py  models.py  schema.py  views.py
app/insurance/migrations/: 0001_initial.py  0002_initial.py
app/insurance_company/: apps.py  models.py  schema.py  views.py
app/insurance_company/migrations/: 0001_initial.py
app/notification/: models.py  schema.py  views.py
app/notification/migrations/: 0001_initial.py  0002_initial.py  0003_alter_notification_title.py
app/users/: employee_views.py  hr_advisor_views.py  models.py  schema.py
app/users/migrations/: 0001_initial.py  0002_alter_user_username.py  0003_alter_user_username.py
core/: settings.py  urls.py  view.py
