[project]
name = "graphql-soa"
version = "0.1.0"
description = ""
authors = [
    {name = "Rabe"}
]
readme = "README.md"
requires-python = ">=3.11, <4"
dependencies = [
    "django (>=5.2,<6.0)",
    "psycopg (>=3.2.6,<4.0.0)",
    "graphene-django (>=3.2.3,<4.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "django-graphql-jwt (>=0.4.0,<0.5.0)",
    "django-graphql-playground (>=1.0,<2.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
